tests/spec/fail/list_comp_filter_non_bool.aja
print([x for x in [1, 2] if 1])
